--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ dependencies {
     // MongoDB for data storage
     implementation 'org.mongodb:mongo-java-driver:_'
 
+    //  Add Mockito for unit testing
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+
+
 }
 
 application {
