--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,10 @@ dependencies {
     // MongoDB for data storage
     implementation 'org.mongodb:mongo-java-driver:_'
 
+    testImplementation 'org.mockito:mockito-core:4.2.0'
+    implementation 'net.dv8tion:JDA:4.4.0'
+
+
 }
 
 application {
@@ -85,7 +89,7 @@ jacocoTestReport {
     reports {
         xml.enabled true
         // Change html.enabled to true if you want html reports
-        html.enabled false
+        html.enabled true
         csv.enabled false
         xml.destination file("${buildDir}/reports/jacoco.xml")
     }
