test on blackjack controller and blackjack game

--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'org.mongodb:mongo-java-driver:_'
 
     testImplementation 'org.mockito:mockito-core:4.2.0'
-    implementation 'net.dv8tion:JDA:4.4.0'
+    // implementation 'net.dv8tion:JDA:4.4.0'
 
 
 
